--- a/src/QualityHats/Views/AdminApplicationUsers/Details.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Details.cshtml
@@ -10,7 +10,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            User Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UserName)
@@ -34,7 +34,7 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
+            Email Confirmed
         </dt>
         <dd>
             @Html.DisplayFor(model => model.EmailConfirmed)
