--- a/src/QualityHats/Views/AdminApplicationUsers/Index.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Index.cshtml
@@ -10,19 +10,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserName)
+                User Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FullName)
+                Customer Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                Email
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EmailConfirmed)
+                Email Confirmed
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Enabled)
+                Enabled
             </th>            
         </tr>
     </thead>
