--- a/src/QualityHats/Views/Home/Contact.cshtml
+++ b/src/QualityHats/Views/Home/Contact.cshtml
@@ -1,17 +1,19 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contact Us";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<div>
+    <img class="img-responsive" src="~/images/contactLarge.jpg" alt="largeImage">
+</div>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div>
+    <hr />
+    <h2>Contact Us</h2>
+    <hr />
+    <div>
+        <h4><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> 09 815 4321</h4>
+        <h4><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> qualityhats2017@outlook.com</h4>
+        <h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 139 Carrington Rd, Mount Albert, Auckland 1025</h4>
+    </div>
+    <div id="googleMap" style="width:100%;height:250px;"></div>
+    <a href="https://goo.gl/maps/wg3J9SkvtwB2">View larger map</a>
+</div>
