--- a/src/QualityHats/Views/AdminApplicationUsers/Delete.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Delete.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            User Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UserName)
@@ -36,7 +36,7 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
+            Email Confirmed
         </dt>
         <dd>
             @Html.DisplayFor(model => model.EmailConfirmed)
