--- a/src/QualityHats/Views/CustomerHats/Index.cshtml
+++ b/src/QualityHats/Views/CustomerHats/Index.cshtml
@@ -17,7 +17,7 @@
 
 <div>
     Category:
-    <a asp-action="Index" class="btn btn-success">All</a>
+    <a asp-action="Index" class="btn btn-success" asp-route-id="">All</a>
     @foreach (var item in ViewBag.Categories)
     {
         <a asp-action="Index" class="btn btn-danger" asp-route-id="@item.CategoryID">@item.CategoryName</a>
@@ -33,16 +33,16 @@
     <thead>
         <tr>
             <th>
-                Image
+
             </th>
             <th>
-                <a asp-action="Index" asp-route-currentFilter="@ViewData["CurrentFilter"]">Name</a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Name</a>
             </th>
             <th>
                 Description
             </th>
             <th>
-                <a asp-action="Index" asp-route-currentFilter="@ViewData["CurrentFilter"]">Price</a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["PriceSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Price</a>
             </th>
             <th></th>
         </tr>
@@ -68,10 +68,8 @@
                 </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@item.HatID">Details</a> |
-                    <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.HatID">
-                        <span class="glyphicon glyphicon-shopping-cart"></span>
-                        Add To Cart
-                    </a>
+                    <a asp-action="AddToCart" asp-controller="ShoppingCart" class="btn btn-warning" asp-route-id="@item.HatID">
+                        <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart</a>
                 </td>
             </tr>
         }
@@ -83,12 +81,14 @@
     var nextDisabled = !Model.HasNextPage ? "disabled" : "";
 }
 <a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
    asp-route-page="@(Model.PageIndex - 1)"
    asp-route-currentFilter="@ViewData["CurrentFilter"]"
    class="btn btn-default @prevDisabled btn">
     Previous
 </a>
 <a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
    asp-route-page="@(Model.PageIndex + 1)"
    asp-route-currentFilter="@ViewData["CurrentFilter"]"
    class="btn btn-default @nextDisabled btn">
