--- a/src/QualityHats/Views/Hats/Index.cshtml
+++ b/src/QualityHats/Views/Hats/Index.cshtml
@@ -3,21 +3,35 @@
 @{
     ViewData["Title"] = "Hats";
 }
-
-<h2>Our Hats</h2>
-
+<hr />
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 
-<form asp-action="Index" method="get">
-    <div class="form-actions no-color">
-        <p>
-            Search: <input type="text" name="SearchString" value="@ViewData["currentFilter"]" /> <input type="submit" value="Search" class="btn btn-default" /> |
-            <a asp-action="Index">Back To Full List</a>
-        </p>
-    </div>
-</form>
+<div>
+    <form asp-action="Index" method="get">
+        <div class="form-actions no-color">
+            <p>
+                Search: <input type="text" name="SearchString" value="@ViewData["currentFilter"]" /> <input type="submit" value="Search" class="btn btn-default" /> |
+                <a asp-action="Index" class="btn btn-success">Back To Full List</a>
+            </p>
+        </div>
+    </form>
+</div>
+
+<div>
+    Category:
+    <a asp-action="Index" class="btn btn-success" asp-route-id="">All</a>
+    @foreach (var item in ViewBag.Categories)
+    {
+        <a asp-action="Index" class="btn btn-danger" asp-route-id="@item.CategoryID">@item.CategoryName</a>
+    }
+</div>
+
+<div>
+    <h3>@ViewData["CurrentCategory"]</h3>
+    <hr />
+</div>
 
 <table class="table">
     <thead>
