--- a/src/QualityHats/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
+++ b/src/QualityHats/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Default";
 }
 
-<h2><span class="glyphicon glyphicon glyphicon-shopping-cart"></span></h2>
-
 <div class="container">
+    <h2><span class="glyphicon glyphicon glyphicon-shopping-cart"></span> Your Cart</h2>
     <div class="row">
         <div class="col-sm-2">
             <h4 class="display-4">Hat ID</h4>
@@ -47,19 +46,19 @@
     }
 
     <div class="row">
-        <div class="col-sm-2"></div>
+        <div class="col-sm-6"></div>
         <div class="col-sm-2">Subtotal:</div>
         <div class="col-sm-2">$@Model.CartTotal</div>
 
     </div>
     <div class="row">
-        <div class="col-sm-2"></div>
+        <div class="col-sm-6"></div>
         <div class="col-sm-2">GST:</div>
         <div class="col-sm-2">$@Model.CartGST.ToString("0.##")</div>
 
     </div>
     <div class="row">
-        <div class="col-sm-2"></div>
+        <div class="col-sm-6"></div>
         <div class="col-sm-2">Grand Total:</div>
         <div class="col-sm-2">$@Model.CartGrandTotal.ToString("0.##")</div>
 
@@ -68,13 +67,9 @@
     @if (@Model.CartItems.Count > 0)
     {
         <div class="row">
-            <div class="col-sm-offset-4">
-                <a asp-action="EmptyCart" asp-controller="ShoppingCart">Empty Cart <span class="glyphicon glyphicon-step-forward"></span></a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-offset-4">             
-                <a asp-action="Create" asp-controller="Orders">Proceed To Checkout <span class="glyphicon glyphicon-step-forward"></span></a>
+            <div class="col-sm-offset-6">
+                <a asp-action="EmptyCart" asp-controller="ShoppingCart" class="btn btn-danger">Empty Cart</a>             
+                <a asp-action="Create" asp-controller="Orders" class="btn btn-success">Proceed To Checkout <span class="glyphicon glyphicon-step-forward"></span></a>
             </div>
         </div>
     }
