--- a/src/QualityHats/Views/Shared/_Layout.cshtml
+++ b/src/QualityHats/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Quality Hats</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand" id="logo">Quality Hats</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -39,8 +39,7 @@
                     {
                         <li><a asp-area="" asp-controller="CustomerHats" asp-action="Index">Hats</a></li>
                     }
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a></li>
                     @if (User.IsInRole("Customer"))
                     {
                         <li><a asp-area="" asp-controller="CustomerOrders" asp-action="Index">My Orders</a></li>
@@ -71,9 +70,9 @@
                 @await Component.InvokeAsync("ShoppingCartViewModel")
             }
         </div>
-
         <footer>
-            <p>&copy; 2017 - Quality Hats</p>
+            <p class="logoFooter">Quality Hats</p>
+            <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 139 Carrington Rd, Mount Albert, Auckland 1025</p>
         </footer>
     </div>
 
@@ -81,6 +80,8 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkwT62oj7Qe-ocVfcs_gX3Th9C1wuX04&callback=initMap"
+                type="text/javascript"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
