--- a/src/QualityHats/Views/Suppliers/Create.cshtml
+++ b/src/QualityHats/Views/Suppliers/Create.cshtml
@@ -1,16 +1,23 @@
 @model QualityHats.Models.Supplier
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create a supplier";
 }
 
-<h2>Create</h2>
+<h2>Create a supplier</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
         <h4>Supplier</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="SupplierName" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="SupplierName" class="form-control" />
+                <span asp-validation-for="SupplierName" class="text-danger"></span>
+            </div>
+        </div>
         <div class="form-group">
             <label asp-for="Email" class="col-md-2 control-label"></label>
             <div class="col-md-10">
@@ -37,13 +44,6 @@
             <div class="col-md-10">
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="SupplierName" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="SupplierName" class="form-control" />
-                <span asp-validation-for="SupplierName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
