--- a/src/QualityHats/Views/Suppliers/Delete.cshtml
+++ b/src/QualityHats/Views/Suppliers/Delete.cshtml
@@ -1,16 +1,21 @@
 @model QualityHats.Models.Supplier
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete A Supplier";
 }
 
-<h2>Delete</h2>
+<h2>Delete a supplier</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this supplier?</h3>
 <div>
-    <h4>Supplier</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.SupplierName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.SupplierName)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
@@ -34,12 +39,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.SupplierName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.SupplierName)
         </dd>
     </dl>
     
