--- a/src/QualityHats/Views/Suppliers/Details.cshtml
+++ b/src/QualityHats/Views/Suppliers/Details.cshtml
@@ -1,15 +1,21 @@
 @model QualityHats.Models.Supplier
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Supplier Details";
 }
 
-<h2>Details</h2>
+<h2>Supplier details</h2>
 
 <div>
     <h4>Supplier</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.SupplierName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.SupplierName)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
@@ -33,12 +39,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.SupplierName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.SupplierName)
         </dd>
     </dl>
 </div>
