--- a/src/QualityHats/Views/Suppliers/Edit.cshtml
+++ b/src/QualityHats/Views/Suppliers/Edit.cshtml
@@ -1,17 +1,23 @@
 @model QualityHats.Models.Supplier
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit The Supplier";
 }
 
-<h2>Edit</h2>
+<h2>Edit the supplier</h2>
 
 <form asp-action="Edit">
     <div class="form-horizontal">
-        <h4>Supplier</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="SupplierID" />
+        <div class="form-group">
+            <label asp-for="SupplierName" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="SupplierName" class="form-control" />
+                <span asp-validation-for="SupplierName" class="text-danger"></span>
+            </div>
+        </div>
         <div class="form-group">
             <label asp-for="Email" class="col-md-2 control-label"></label>
             <div class="col-md-10">
@@ -38,13 +44,6 @@
             <div class="col-md-10">
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="SupplierName" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="SupplierName" class="form-control" />
-                <span asp-validation-for="SupplierName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
