--- a/src/QualityHats/Views/Suppliers/Index.cshtml
+++ b/src/QualityHats/Views/Suppliers/Index.cshtml
@@ -1,10 +1,10 @@
 @model IEnumerable<QualityHats.Models.Supplier>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Supplier";
 }
 
-<h2>Index</h2>
+<h2>Supplier</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,6 +12,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.SupplierName)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
@@ -24,15 +27,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SupplierName)
-            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.SupplierName)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
@@ -44,9 +47,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SupplierName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.SupplierID">Edit</a> |
