--- a/src/QualityHats/Views/AdminApplicationUsers/Details.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Customer Details";
 }
 
-<h2>Customer Details</h2>
+<h2 class="title">Customer Details</h2>
 
 <div>
     <hr />
