--- a/src/QualityHats/Views/CustomerHats/Index.cshtml
+++ b/src/QualityHats/Views/CustomerHats/Index.cshtml
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <h3>@ViewData["CurrentCategory"]</h3>
+    <h3 class="title">@ViewData["CurrentCategory"]</h3>
     <hr />
 </div>
 
