--- a/src/QualityHats/Views/Home/Contact.cshtml
+++ b/src/QualityHats/Views/Home/Contact.cshtml
@@ -7,7 +7,7 @@
 
 <div>
     <hr />
-    <h2>Contact Us</h2>
+    <h2 class="title">Contact Us</h2>
     <hr />
     <div>
         <h4><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> 09 815 4321</h4>
