--- a/src/QualityHats/Views/Home/Index.cshtml
+++ b/src/QualityHats/Views/Home/Index.cshtml
@@ -41,11 +41,11 @@
     </a>
 </div>
 <hr />
-<div align="center"><h3>WE MAKE PRODUCTS WITH FABRIC FROM AROUND THE WORLD</h3></div>
+<div align="center" class="title"><h3>WE MAKE PRODUCTS WITH FABRIC FROM AROUND THE WORLD</h3></div>
 <hr />
 <div class="row">
     <div align="center" class="col-md-4">
-        <h4>Men's Hats</h4>
+        <h4 class="title">Men's Hats</h4>
         <hr />
         <img src="~/images/globetrotter5panel.jpg" alt="Globetrotter 5-panel" class="img-responsive" />
         <hr />
@@ -59,7 +59,7 @@
         }
     </div>
     <div align="center" class="col-md-4">
-        <h4>Women's Hats</h4>
+        <h4 class="title">Women's Hats</h4>
         <hr />
         <img src="~/images/serengeteebeanie.jpg" alt="Serengetee beanie" class="img-responsive" />
         <hr />
@@ -73,7 +73,7 @@
         }
     </div>
     <div align="center" class="col-md-4">
-        <h4>Children's Hats</h4>
+        <h4 class="title">Children's Hats</h4>
         <hr />
         <img src="~/images/camden5panel.jpg" alt="Camden 5-panel" class="img-responsive" />
         <hr />
