--- a/src/QualityHats/Views/Orders/Delete.cshtml
+++ b/src/QualityHats/Views/Orders/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete The Order";
 }
 
-<h2>Delete the order</h2>
+<h2 class="title">Delete the order</h2>
 
-<h3>Are you sure you want to delete this order?</h3>
+<h3 class="title">Are you sure you want to delete this order?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
