--- a/src/QualityHats/Views/Orders/Purchased.cshtml
+++ b/src/QualityHats/Views/Orders/Purchased.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Purchased";
 }
 
-<h2><span class="glyphicon glyphicon-saved"></span>Thank you For Your Purchase!</h2>
+<h2 class="title"><span class="glyphicon glyphicon-saved"></span>Thank you For Your Purchase!</h2>
 
 <div>
-    <h4>The following order will be dispatched as per the details below.</h4>
+    <h4 class="title">The following order will be dispatched as per the details below.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
