--- a/src/QualityHats/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
+++ b/src/QualityHats/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h2><span class="glyphicon glyphicon glyphicon-shopping-cart"></span> Your Cart</h2>
+    <h2 class="title"><span class="glyphicon glyphicon glyphicon-shopping-cart"></span> Your Cart</h2>
     <div class="row">
         <div class="col-sm-2">
             <h4 class="display-4">Hat ID</h4>
