--- a/src/QualityHats/Views/Suppliers/Delete.cshtml
+++ b/src/QualityHats/Views/Suppliers/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete A Supplier";
 }
 
-<h2>Delete a supplier</h2>
+<h2 class="title">Delete a supplier</h2>
 
-<h3>Are you sure you want to delete this supplier?</h3>
+<h3 class="title">Are you sure you want to delete this supplier?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
