--- a/src/QualityHats/Views/Suppliers/Edit.cshtml
+++ b/src/QualityHats/Views/Suppliers/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit The Supplier";
 }
 
-<h2>Edit the supplier</h2>
+<h2 class="title">Edit the supplier</h2>
 
 <form asp-action="Edit">
     <div class="form-horizontal">
