--- a/src/QualityHats/Views/Account/Login.cshtml
+++ b/src/QualityHats/Views/Account/Login.cshtml
@@ -8,12 +8,12 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="title">@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-8">
         <section>
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                <h4>Use a local account to log in</h4>
+                <h4 class="title">Use a local account to log in</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
