--- a/src/QualityHats/Views/AdminApplicationUsers/Delete.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete A Customer";
 }
 
-<h2>Delete</h2>
-<p class="text-danger">@ViewData["ErrorMessage"]</p>
-<h3>Are you sure you want to delete this customer?</h3>
+<h2 class="title">Delete</h2>
+<p class="text-danger"> @TempData["CustomerOrder"] </p>
+<h3 class="title">Are you sure you want to delete this customer?</h3>
 <div>
-    <h3> @TempData["CustomerOrder"] </h3>
     <hr />
     <dl class="dl-horizontal">
         <dt>
