--- a/src/QualityHats/Views/AdminApplicationUsers/Edit.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit The Customer";
 }
 
-<h2>Edit the customer</h2>
+<h2 class="title">Edit the customer</h2>
 
 <form asp-action="Edit">
     <div class="form-horizontal">
