--- a/src/QualityHats/Views/AdminApplicationUsers/Index.cshtml
+++ b/src/QualityHats/Views/AdminApplicationUsers/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Customers";
 }
 
-<h2>Customers</h2>
+<h2 class="title">Customers</h2>
 
 <table class="table">
     <thead>
