--- a/src/QualityHats/Views/Categories/Create.cshtml
+++ b/src/QualityHats/Views/Categories/Create.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2 class="title">Create</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>Category</h4>
+        <h4 class="title">Category</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
