--- a/src/QualityHats/Views/Categories/Delete.cshtml
+++ b/src/QualityHats/Views/Categories/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="title">Delete</h2>
 
-<h3>Are you sure you want to delete this category?</h3>
+<h3 class="title">Are you sure you want to delete this category?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
