--- a/src/QualityHats/Views/Categories/Details.cshtml
+++ b/src/QualityHats/Views/Categories/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2 class="title">Details</h2>
 
 <div>
-    <h4>Category</h4>
+    <h4 class="title">Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
