--- a/src/QualityHats/Views/Categories/Edit.cshtml
+++ b/src/QualityHats/Views/Categories/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2 class="title">Edit</h2>
 
 <form asp-action="Edit">
     <div class="form-horizontal">
