--- a/src/QualityHats/Views/Hats/Create.cshtml
+++ b/src/QualityHats/Views/Hats/Create.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Create A New Hat";
 }
 
-<h2>Create A New Hat</h2>
+<h2 class="title">Create A New Hat</h2>
 
 <form asp-action="Create" enctype="multipart/form-data">
     <div class="form-horizontal">
-        <h4>Please enter details</h4>
+        <h4 class="title">Please enter details</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
