--- a/src/QualityHats/Views/Hats/Delete.cshtml
+++ b/src/QualityHats/Views/Hats/Delete.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Delete The Hat";
 }
 
-<h2>Delete</h2>
+<h2 class="title">Delete</h2>
+<p class="text-danger"> @TempData["HatUsed"] </p>
 <p class="text-danger">@ViewData["ErrorMessage"]</p>
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="title">Are you sure you want to delete this hat?</h3>
 <div>
-    <h3> @TempData["HatUsed"] </h3>
-    <h4>Hat</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
