--- a/src/QualityHats/Views/Manage/Index.cshtml
+++ b/src/QualityHats/Views/Manage/Index.cshtml
@@ -3,11 +3,11 @@
     ViewData["Title"] = "Manage your account";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="title">@ViewData["Title"]</h2>
 <p class="text-success">@ViewData["StatusMessage"]</p>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4 class="title">Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>First Name:</dt>
