--- a/src/QualityHats/Views/Orders/Create.cshtml
+++ b/src/QualityHats/Views/Orders/Create.cshtml
@@ -6,7 +6,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<h3>Please confirm your details</h3>
+<h3 class="title">Please confirm your details</h3>
 <hr />
 <dl class="dl-horizontal">
     <dt>
