--- a/src/QualityHats/Views/Orders/Edit.cshtml
+++ b/src/QualityHats/Views/Orders/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit The Order";
 }
 
-<h2>Edit the order status</h2>
+<h2 class="title">Edit the order status</h2>
 
 <form asp-action="Edit">
     <div class="form-horizontal">
