--- a/src/QualityHats/Views/Suppliers/Create.cshtml
+++ b/src/QualityHats/Views/Suppliers/Create.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Create a supplier";
 }
 
-<h2>Create a supplier</h2>
+<h2 class="title">Create a supplier</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>Supplier</h4>
+        <h4 class="title">Supplier</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
