--- a/src/QualityHats/Views/Suppliers/Details.cshtml
+++ b/src/QualityHats/Views/Suppliers/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Supplier Details";
 }
 
-<h2>Supplier details</h2>
+<h2 class="title">Supplier details</h2>
 
 <div>
-    <h4>Supplier</h4>
+    <h4 class="title">Supplier</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
