--- a/src/QualityHats/Views/Suppliers/Index.cshtml
+++ b/src/QualityHats/Views/Suppliers/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Supplier";
 }
 
-<h2>Supplier</h2>
+<h2 class="title">Supplier</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
