--- a/src/QualityHats/Views/Hats/Index.cshtml
+++ b/src/QualityHats/Views/Hats/Index.cshtml
@@ -37,13 +37,12 @@
     <thead>
         <tr>
             <th>
-                Image
             </th>
             <th>
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Name</a>
             </th>
             <th>
-                Description
+                Category
             </th>
             <th>
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["PriceSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Price</a>
@@ -64,7 +63,7 @@
                 @Html.DisplayFor(modelItem => item.HatName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Category.CategoryName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UnitPrice)
